# Sidekick

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  justfile  mise.toml
cmake/: ClangTools.cmake  Warnings.cmake
shaders/: simple.frag  simple.vert
shaders/static/: static.vert
src/: io.odin  main.cpp  main.odin  sk_pch.hpp  window.odin
src/Sidekick/Core/: Application.cpp  Application.h  Application.hpp  Assert.h  CommandList.hpp  Event.h  Event.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Input.cpp  Input.h  Input.hpp  KeyCode.hpp  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  Platform.cpp  Platform.hpp  Swapchain.hpp  Window.cpp  Window.h  Window.hpp
src/Sidekick/Events/: Event.hpp
src/Sidekick/Graphics/: Program.cpp  Program.hpp  Shader.cpp  Shader.hpp
src/Sidekick/Platform/: GlfwPlatform.cpp  GlfwPlatform.hpp  GlfwWindow.cpp  GlfwWindow.hpp  OpenGLCommandList.cpp  OpenGLCommandList.hpp  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.hpp  OpenGLSwapchain.cpp  OpenGLSwapchain.hpp
src/Sidekick/Platform/Wgpu/: WgpuBackend.cpp  WgpuBackend.hpp
src/Sidekick/Renderer/: Camera.cpp  Camera.h  Camera.hpp  CameraController.cpp  CameraController.h  GraphicsBackend.cpp  GraphicsBackend.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp
src/Sidekick/Renderer/Backend/: GraphicsBackend.cpp  GraphicsBackend.h  WgpuBackend.cpp  WgpuBackend.h
src/Sidekick/platform/wgpu/: wgpu_backend.cpp  wgpu_backend.hpp
src/Sidekick/renderer/: graphics_backend.cpp  graphics_backend.hpp
